plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
}

group 'io.arenadata.ktls'

ext {
    publishUsername = System.getenv('PUBLISH_USERNAME')
    publishPassword = System.getenv('PUBLISH_PASSWORD')

    mavenUrl = project.hasProperty('mavenUrl') ? project.mavenUrl : 'https://maven.pkg.github.com/arenadata/ktls-jni'
    mavenUsername = project.hasProperty('mavenUsername') ? project.mavenUsername : publishUsername
    mavenPassword = project.hasProperty('mavenPassword') ? project.mavenPassword : publishPassword
}

repositories {
    // Uncomment mavenLocal to publish artifacts to local maven
    // mavenLocal()
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
    testImplementation 'org.bouncycastle:bcpkix-jdk18on:1.71.1'
    testImplementation 'commons-codec:commons-codec:1.15'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    jvmArgs (
        '--add-opens', 'java.base/sun.security.ssl=ALL-UNNAMED',
        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens', 'java.base/java.io=ALL-UNNAMED'
    )
    useJUnitPlatform()
}

sourceSets {
    main {
        resources {
            srcDirs "src/main/resources", "build/natives/lib"
        }
    }
}

compileJava {
    sourceCompatibility = '8'
    targetCompatibility = '8'
    options.compilerArgs += ["-h", file("src/main/include/jni_generated")]
}

def os = System.getProperty("os.name").toLowerCase()
def isLinux = os.contains("linux")

task compileJNI {
    dependsOn compileJava
    doLast {
        // Run the build-native.sh script if the "buildType" flag is set
        if (project.hasProperty('buildType') && project.getProperty('buildType') == 'native') {
            exec {
                commandLine 'scripts/build-native.sh'
            }
        } else {
            exec {
                commandLine 'scripts/prepare-docker-image.sh'
            }
            exec {
                commandLine 'scripts/build-linux-on-docker.sh'
            }
        }
    }
}

clean.doFirst {
    delete fileTree('src/main/include/jni_generated') {
        include '*.h'
    }
}

processResources {
    dependsOn compileJNI
}

tasks.withType(Test) {
    systemProperty "java.library.path", "build/natives/lib"
    testLogging.showStandardStreams = true
}


publishing {
    repositories {
        maven {
            url = mavenUrl
            credentials {
                username = mavenUsername
                password = mavenPassword
            }
        }
    }
    publications {
        maven(MavenPublication) {
            from components.java
            pom {
                url = 'https://github.com/linkedin/ktls-jni'
                licenses {
                    license {
                        name = 'BSD 2-Clause License'
                        url = 'https://opensource.org/licenses/BSD-2-Clause'
                        distribution = 'repo'
                    }
                }
            }
        }
    }
}

publishToMavenLocal.dependsOn(assemble)

task install {
    dependsOn publishToMavenLocal
}

publish.dependsOn install
